[project]
name = "cooling-loads"
version = "0.1.0"
description = ""
authors = [
    {name = "Kenny Shultz",email = "kenny@permitzip.com"}
]
readme = "README.md"
requires-python = "^3.13"
dependencies = [
    "streamlit (>=1.47.0,<2.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "altair (>=5.5.0,<6.0.0)",
    "fpdf (>=1.7.2,<2.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "plotly (>=6.2.0,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pandas-stubs = "^2.3.0.250703"

